Patch from Pete Goodeve: add MidiPortGlue to have old midikit endpoints registered in new midikit (#5625).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36019 a95241bf-73f2-0310-859d-f6bbb57e9c96